--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,14 +1,39 @@
 <div class="panel panel-default">
-<div class="panel-heading">
+  <div class="panel-heading">
     メッセージ一覧
+  </div>
+    
+  <div class="panel-body">
+    <% @messages.each do |message| %>
+      <span class="label label-info"><%= message.name %></span>
+      <%= message.body %>
+      <br>
+    <% end %>
+  </div>
+</div>
+
+  
+ 
+<%= form_for(@message) do |f| %>
+<form class="form-horizontal">
+  <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">名前:</label>
+    <div class="col-sm-10">
+       <%= f.text_field :name, class: "form-control" %><br>
     </div>
- <div class="panel-body"> 
-<% @messages.each do |message| %>
-<span class="label label-info"><%= message.name %></span>
-<%= message.body %>
-  <br>
+  </div>
+ 
+  <div class="form-group">
+    <label for="inputPassword3" class="col-sm-2 control-label">内容:</label>
+    <div class="col-sm-10">
+  <%= f.text_field :body, class: "form-control" %><br>
+  </div></div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+     
+     <%= f.submit class: "btn btn-default" %>
+    </div> 
+    </div>
+  
 <% end %>
-</div>
-</div>
-<% #部分テンプレートを読み込んでいる %>
-<%= render 'form' %>
+</form>
