--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -19,14 +19,14 @@
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">名前:</label>
     <div class="col-sm-10">
-       <%= f.text_field :name, class: "form-control" %><br>
+       <%= f.text_area :name, class: "form-control" %><br>
     </div>
   </div>
  
   <div class="form-group">
     <label for="inputPassword3" class="col-sm-2 control-label">内容:</label>
     <div class="col-sm-10">
-  <%= f.text_field :body, class: "form-control" %><br>
+  <%= f.text_area :body, class: "form-control" %><br>
   </div></div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
