--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+
 <body>
     <nav class="navbar">
     <div class="container">
@@ -16,8 +16,17 @@
       </div>
     </div>
   </nav>
+ 
   <div class="container">
+    <% if notice %>
+      <div class="alert alert-info">
+        <%= notice %>
+      </div>
+    <% end %>
+    
     <%= yield %>
   </div>
+</body>
+</html>
   </body>
 </html>
