--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -19,21 +19,19 @@
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">名前:</label>
     <div class="col-sm-10">
-       <%= f.text_area :name, class: "form-control" %><br>
+       <%= f.text_field  :name, class: "form-control" %>
     </div>
   </div>
- 
+  
   <div class="form-group">
     <label for="inputPassword3" class="col-sm-2 control-label">内容:</label>
     <div class="col-sm-10">
-  <%= f.text_area :body, class: "form-control" %><br>
+  <%= f.text_area :body, class: "form-control" %>
   </div></div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-     
-     <%= f.submit class: "btn btn-default" %>
-    </div> 
-    </div>
+      <button>
+     <%= f.submit class: "btn btn-default" %>Sign in</button>
+    </div> </div>
   
 <% end %>
-</form>
