--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -25,6 +25,13 @@
   <%= f.text_area :body, class: "form-control" %>
   </div></div>
   <div class="form-group">
+    <label for="message_name" class="col-sm-2 control-label">年齢</label>
+    <div class="col-sm-10">
+       <%= f.text_field  :age, class: "form-control" %>歳
+    </div>
+  </div>
+  
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
      
      <%= f.submit class: "btn btn-default" %>
