--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -26,8 +26,11 @@
   </div></div>
   <div class="form-group">
     <label for="message_name" class="col-sm-2 control-label">年齢:</label>
-    <div class="col-sm-10">
-       <%= f.text_field  :age, class: "form-control" %>歳
+    <div class="col-sm-8">
+       <%= f.text_field  :age, class: "form-control" %>
+    </div>
+     <div class="col-sm-2">
+      歳
     </div>
   </div>
   
